# stag

./: .gitignore  CMakeLists.txt  main.cpp
src/: Drawer.cpp  Drawer.h  EDInterface.cpp  EDInterface.h  EDLineDetect.cpp  EDLineDetect.h  EDTypes.cpp  EDTypes.h  Ellipse.cpp  Marker.h  PoseRefiner.cpp  Quad.h  QuadDetector.cpp  QuadDetector.h  Stag.cpp  Stag.h
src/ED/: EDLines.h  EdgeMap.h
